--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Job searching site for junior developers"
     />
-    <link rel="icon" href="icon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.svg" />
     <!-- Icon created by MD Badsha Meah -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
