Included font and website logo

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Job searching site for junior developers"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" href="%PUBLIC_URL%/icon.svg" />
     <!-- Icon created by MD Badsha Meah -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
